tests/specs/run/unstable_temporal_api_patch/main.out
Check [WILDCARD]
[WILDCARD]
undefined
iso8601
UTC
undefined
undefined
1 day, 6 hr, 30 min
error: Uncaught (in promise) Error: Temporal error: Internal error: Not yet implemented..
).getTimeZoneTransition("next");
  ^
    at ZonedDateTime.getTimeZoneTransition (<anonymous>)
    at [WILDCARD]main.ts:18:3
